stone: parts: add performance mode

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -94,6 +94,11 @@
             android:label="@string/core_control_title"
             android:exported="false" />
 
+	<activity
+    	    android:name=".performance.PerformanceActivity"
+    	    android:label="@string/performance_mode_title"
+    	    android:exported="false" />
+
         <activity
             android:name=".speaker.ClearSpeakerActivity" 
             android:label="@string/clear_speaker_title">
