--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -397,7 +397,29 @@ on post-fs-data
     chmod 0660 /sys/devices/system/cpu/cpu5/online
     chmod 0660 /sys/devices/system/cpu/cpu6/online
     chmod 0660 /sys/devices/system/cpu/cpu7/online
-    
+
+    # Performance Mode - CPU files
+    chown system system /sys/devices/system/cpu/cpufreq/policy0/scaling_governor
+    chown system system /sys/devices/system/cpu/cpufreq/policy6/scaling_governor
+    chown system system /sys/devices/system/cpu/cpufreq/policy0/scaling_cur_freq
+    chown system system /sys/devices/system/cpu/cpufreq/policy6/scaling_cur_freq
+    chmod 0664 /sys/devices/system/cpu/cpufreq/policy0/scaling_governor
+    chmod 0664 /sys/devices/system/cpu/cpufreq/policy6/scaling_governor
+    chmod 0664 /sys/devices/system/cpu/cpufreq/policy0/scaling_cur_freq
+    chmod 0664 /sys/devices/system/cpu/cpufreq/policy6/scaling_cur_freq
+
+    # Performance Mode - GPU files
+    chown system system /sys/class/kgsl/kgsl-3d0/max_clock_mhz
+    chown system system /sys/class/kgsl/kgsl-3d0/min_clock_mhz
+    chown system system /sys/class/kgsl/kgsl-3d0/default_pwrlevel
+    chown system system /sys/class/kgsl/kgsl-3d0/force_clk_on
+    chown system system /sys/class/kgsl/kgsl-3d0/force_rail_on
+    chmod 0664 /sys/class/kgsl/kgsl-3d0/max_clock_mhz
+    chmod 0664 /sys/class/kgsl/kgsl-3d0/min_clock_mhz
+    chmod 0664 /sys/class/kgsl/kgsl-3d0/default_pwrlevel
+    chmod 0664 /sys/class/kgsl/kgsl-3d0/force_clk_on
+    chmod 0664 /sys/class/kgsl/kgsl-3d0/force_rail_on
+
 service nqnfcinfo /system/vendor/bin/nqnfcinfo
     class late_start
     group nfc
